[metadata]
name = importtime_waterfall
version = 1.0.0
description = Generate waterfalls from `-Ximporttime` tracing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/importtime-waterfall
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = importtime_waterfall
python_requires = >=3.7

[options.entry_points]
console_scripts =
    importtime-waterfall=importtime_waterfall:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
